[tool.pysen]
version = "0.11"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py311"

  [[tool.pysen.lint.mypy_targets]]
    paths = ["."]


[tool.poetry]
name = "liveinfo-api-middleware"
version = "0.0.0"
description = ""
authors = ["aoirint <aoirint@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
requests = "^2.32.2"
beautifulsoup4 = "^4.12.3"
html5lib = "^1.1"
pydantic = "^2.7.1"


[tool.poetry.group.dev.dependencies]
pysen = "^0.11.0"
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.0.0"
flake8-bugbear = "^24.4.26"
mypy = "^1.10.0"
pytest = "^8.2.1"
types-requests = "^2.32.0.20240523"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
