[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
]

[tool.mypy]
strict = true


[tool.poetry]
name = "liveinfo-api-middleware"
version = "0.0.0"
description = ""
authors = ["aoirint <aoirint@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.5"}
uvicorn = {extras = ["standard"], version = "^0.32.1"}
requests = "^2.32.2"
beautifulsoup4 = "^4.12.3"
html5lib = "^1.1"
pydantic = "^2.7.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
pytest = "^8.2.1"
types-requests = "^2.32.0.20240523"
ruff = "^0.8.1"
types-beautifulsoup4 = "^4.12.0.20241020"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
