[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
]

[tool.mypy]
strict = true

[tool.uv]
package = true
add-bounds = "exact"

[tool.setuptools]
packages = ["liveinfo_api_middleware"]

[project]
name = "liveinfo-api-middleware"
version = "0.0.0"
description = "Middleware API server to proxy and cache Niconico Live API (unofficial) and YouTube Live API"
readme = "README.md"
authors = [
    {name = "aoirint", email = "aoirint@gmail.com"}
]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]==0.119.0",
    "requests==2.32.4",
    "beautifulsoup4==4.12.3",
    "html5lib==1.1",
    "pydantic==2.10.2",
    "pydantic-settings==2.12.0",
]

[project.urls]
Repository = "https://github.com/aoirint/liveinfo_api_middleware"

[dependency-groups]
dev = [
    "mypy==1.13.0",
    "pytest==8.3.4",
    "types-requests==2.32.0.20241016",
    "ruff==0.8.1",
    "types-beautifulsoup4==4.12.0.20241020",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
